<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_100">


    <ImageView
        android:id="@+id/image_song"
        android:layout_width="@dimen/dp_70"
        android:layout_height="@dimen/dp_70"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/msg_00_00"
        android:textColor="@color/colorSecondaryText"
        app:layout_constraintBottom_toTopOf="@+id/text_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginTop="@dimen/dp_8"
        android:maxLines="1"
        android:text="@string/msg_title"
        android:textColor="@color/colorPrimaryText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/image_song"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_artist"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp_4"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:maxLines="1"
        android:text="@string/msg_artist"
        android:textColor="@color/colorSecondaryText"
        app:layout_constraintBottom_toTopOf="@+id/text_title"
        app:layout_constraintEnd_toStartOf="@+id/text_duration"
        app:layout_constraintStart_toEndOf="@+id/image_song" />

    <ImageView
        android:id="@+id/image_ic_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_2"
        android:layout_marginTop="@dimen/dp_4"
        android:src="@drawable/ic_play_arrow_grey"
        app:layout_constraintStart_toEndOf="@+id/image_song"
        app:layout_constraintTop_toBottomOf="@+id/text_title" />

    <TextView
        android:id="@+id/text_number_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:text="@string/msg_1k"
        app:layout_constraintBottom_toBottomOf="@id/image_ic_play"
        app:layout_constraintStart_toEndOf="@+id/image_ic_play"
        app:layout_constraintTop_toTopOf="@id/image_ic_play" />

    <ImageView
        android:id="@+id/image_ic_favorite"
        android:layout_width="@dimen/dp_20"
        android:layout_height="@dimen/dp_20"
        android:layout_marginStart="90dp"
        android:src="@drawable/ic_favorite_grey"
        app:layout_constraintBottom_toBottomOf="@id/image_ic_play"
        app:layout_constraintStart_toEndOf="@+id/image_ic_play"
        app:layout_constraintTop_toTopOf="@id/image_ic_play" />

    <TextView
        android:id="@+id/text_number_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_4"
        android:text="@string/msg_1k"
        app:layout_constraintBottom_toBottomOf="@id/image_ic_play"
        app:layout_constraintStart_toEndOf="@id/image_ic_favorite"
        app:layout_constraintTop_toTopOf="@id/image_ic_play" />
</android.support.constraint.ConstraintLayout>

